Entry dates fixed - more UI alignments

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,7 @@
   }
   
   .dash-cont {
-    @apply w-225 h-240 p-1 bg-blue-500 rounded-lg shadow-md 
+    @apply w-225 h-245 p-1 bg-blue-500 rounded-lg shadow-md 
     relative left-[450px] top-[10px] border-4 border-solid border-[black];
   }
 
@@ -131,7 +131,7 @@
   }
 
   .solo-entry-style {
-    @apply bg-white rounded-lg m-4 p-3 border-2 border-black flex text-xl h-26;
+    @apply bg-white rounded-lg m-4 p-3 border-2 border-black flex text-xl h-30;
   }
 
   .input-style {
@@ -151,16 +151,6 @@
   .delete-style {
     @apply text-black text-base absolute right-[50px] hover:text-xl cursor-pointer;
   }
-
-  /* .edit-style {
-    @apply text-black text-base relative left-[450px] top-[2px]
-    hover:text-xl cursor-pointer;
-  }
-
-  .delete-style {
-    @apply relative left-[450px] top-[2px] text-base
-        text-black hover:text-xl cursor-pointer;
-  } */
 }
 
 .custom-modal [class*="modal"] > div {
